--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -24,12 +24,42 @@ body{
 }
 
 .box{
-  justify-content: center;
   background: $box-bg;
   color: $box-color;
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
+}
+
+.box-mouse-in{
+  animation-name: dark;
+  animation-duration: 1s;
+  background-color: darken($box-bg, 4%);
+}
+
+.box-mouse-out{
+  animation-name: light;
+  animation-duration: 1s;
+  background-color: $box-bg;
+}
+
+@keyframes light{
+  from{
+    background-color: darken($box-bg, 4%);
+  }
+  to{
+    background-color: $box-bg;
+  }
+}
+
+@keyframes dark {
+  from{
+    background-color: $box-bg;
+  }
+  
+  to{
+    background-color: darken($box-bg, 4%);
+  }
 }
 
 .box p{
