--- a/stylesheets/css/animations.css
+++ b/stylesheets/css/animations.css
@@ -121,39 +121,5 @@
     background-color: #EB9034; }
   to {
     background-color: #e88118; } }
-body {
-  background: #746862;
-  font-family: "Cinzel", serif;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none; }
 
-.row {
-  display: flex;
-  margin-bottom: 15px; }
-
-.center {
-  justify-content: center; }
-
-#left, #right {
-  width: 50%; }
-
-.box {
-  color: #403332;
-  border-radius: 10px;
-  cursor: pointer;
-  width: 20%;
-  font-size: 10px;
-  margin-right: 5px; }
-
-.unowned {
-  background: gray; }
-
-.box p {
-  display: flex;
-  justify-content: center; }
-
-.second {
-  margin-top: -10px; }
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=animations.css.map */
