--- a/stylesheets/css/animations.css
+++ b/stylesheets/css/animations.css
@@ -121,5 +121,16 @@
     background-color: #EB9034; }
   to {
     background-color: #e88118; } }
+.increaseSize {
+  animation-name: increase;
+  animation-duration: 5s; }
+
+@keyframes increase {
+  from {
+    width: 30px;
+    height: 30px; }
+  to {
+    width: 50px;
+    height: 50px; } }
 
 /*# sourceMappingURL=animations.css.map */
