--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -121,6 +121,17 @@
     background-color: #EB9034; }
   to {
     background-color: #e88118; } }
+.increaseSize {
+  animation-name: increase;
+  animation-duration: 5s; }
+
+@keyframes increase {
+  from {
+    width: 30px;
+    height: 30px; }
+  to {
+    width: 50px;
+    height: 50px; } }
 body {
   background: #746862;
   font-family: "Cinzel", serif;
@@ -144,7 +155,14 @@ body {
   cursor: pointer;
   width: 20%;
   font-size: 10px;
-  margin-right: 5px; }
+  margin-right: 5px;
+  height: 50px;
+  line-height: 50px;
+  padding: 0; }
+
+.box p {
+  margin: 0;
+  padding: 0; }
 
 .unowned {
   background: gray; }
@@ -155,5 +173,18 @@ body {
 
 .second {
   margin-top: -10px; }
+
+.circle {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background: white;
+  margin-left: -40px;
+  margin-top: 30px;
+  border: 2px solid white;
+  text-align: center;
+  line-height: 0px;
+  cursor: pointer; }
 
 /*# sourceMappingURL=main.css.map */
